--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -17,10 +17,11 @@
 
         <div class="navbar-end">
             <div class="navbar-item">
-                <form>
+                <form method="POST">
+                    {% csrf_token %}
                     <div class="field has-addons">
                         <div class="control">
-                            <input class="input" type="text" placeholder="Add Todo">
+                            <input name="task" class="input" type="text" placeholder="Add Todo">
                         </div>
                         <div class="control">
                             <button type="submit" class="button is-link">Submit</button>
