--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -33,6 +33,18 @@
     </div>
 </nav>
 <section class="section">
+    {% if messages %}
+            {% for message in messages %}
+                <article class="message is-success">
+                    <div class="message-header">
+                        <p>Nice!</p>
+                    </div>
+                    <div class="message-body">
+                        {{ message }}
+                    </div>
+                </article>
+            {% endfor %}
+        {% endif %}
     <table class="table is-hoverable is-fullwidth">
         <thead>
         <tr>
