Add Delete Task

--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -73,9 +73,8 @@
                 <td>
                     {{ todo.created}}
                 </td>
-                
                 <td>
-                    Remove Task
+                    <a href="{% url 'delete' todo.id %}">Remove</a>
                 </td>
             </tr>
         {% endfor %}
