--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -11,7 +11,7 @@
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
-                Home
+                To Do App
             </a>
         </div>
 
@@ -32,6 +32,12 @@
         </div>
     </div>
 </nav>
+{% if user.is_authenticated %}
+    <h1>Welcome, {{ user.username }}.</h1>
+{% endif %} 
+{% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% endif %} 
 <section class="section">
     {% if messages %}
             {% for message in messages %}
