--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -38,6 +38,11 @@
 {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
 {% endif %} 
+<div>
+{% if request.user.is_authenticated %}
+    <a href="{% url 'change_password' %}">Change password</a>
+{% endif %} 
+</div>
 <section class="section">
     {% if messages %}
             {% for message in messages %}
