--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -16,9 +16,9 @@
     </div>
 </nav>
 <div style='text-align: center;padding-left: 600px;padding-right: 600px; height: 550px;'>
-<div style="font-size: 30px;height: 100px;">
-<h1>Login Page</h1>
-</div>
+
+<h1 style="font-size: 30px;height: 100px;">Login Page</h1>
+
 <form method="POST" action="">
     {% csrf_token %}
     <div class="field">
