--- a/todoapp/templates/base.html
+++ b/todoapp/templates/base.html
@@ -12,5 +12,5 @@
 
 {% endblock content %}
 </body>
-<footer>Copyright 2021</footer>
+<footer style='text-align: center'>Copyright 2021</footer>
 </html>
