--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -2,6 +2,38 @@
 
 
 {% block content %}
+<nav class="navbar is-light" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+            
+        </a>
+    </div>
+
+    <div class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item">
+                To Do App
+            </a>
+        </div>
+
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="field has-addons">
+                        <div class="control">
+                            <input name="task" class="input" type="text" placeholder="Add Todo">
+                        </div>
+                        <div class="control">
+                            <button type="submit" class="button is-link">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <section class="section">
         <form method="POST">
             {% csrf_token %}
@@ -16,4 +48,10 @@
             </div>
         </form>
     </section>
+<div style="align-content: center;">
+{% if request.user.is_authenticated %}
+    <a href="{% url 'home' %}">Back</a>
+   
+{% endif %} 
+</div>    
 {% endblock %}
