--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -62,6 +62,7 @@
         {% endif %}
     {% endfor %}
 </div>
+<a href="{% url 'signup' %}">Don't have an account ? Signup now</a>  
 </div>
 
 {% endblock %}
