Tweaks and change timezone

--- a/todoapp/templates/change_password.html
+++ b/todoapp/templates/change_password.html
@@ -17,36 +17,21 @@
 </nav>
 
 
-<div style='text-align: center;padding-left: 600px;padding-right: 600px; height: 550px;'>
+<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 550px;'>
 <h1 style="font-size: 30px;height: 100px;">Change Password</h1>    
 <form method="post">
     {% csrf_token %}
     <div class="field">
         <label class="label">Old Password</label>
-        <p class="control has-icons-left">
-          <input class="input" type="password" name="old_password" placeholder="Password">
-          <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-          </span>
-        </p>
+        <input class="input" type="password" name="old_password" >
     </div>
     <div class="field">
         <label class="label">New Password</label>
-        <p class="control has-icons-left">
-          <input class="input" type="password" name="new_password1" placeholder="Password">
-          <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-          </span>
-        </p>
+        <input class="input" type="password" name="new_password1" >
     </div>
     <div class="field">
         <label class="label">Confirm New Password</label>
-        <p class="control has-icons-left">
-          <input class="input" type="password" name="new_password2" placeholder="Password">
-          <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-          </span>
-        </p>
+        <input class="input" type="password" name="new_password2" >
     </div>
     
     <div class="field">
