--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -4,9 +4,7 @@
 {% block content %}
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-            
-        </a>
+        <a class="navbar-item" href="https://bulma.io"></a>
     </div>
 
     <div class="navbar-menu">
@@ -48,10 +46,9 @@
             </div>
         </form>
     </section>
-<div style="align-content: center;">
+
 {% if request.user.is_authenticated %}
     <a href="{% url 'home' %}">Back</a>
-   
 {% endif %} 
-</div>    
+
 {% endblock %}
