--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -3,18 +3,14 @@
 {% block content %}
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-            
-        </a>
+        <a class="navbar-item" href="https://bulma.io"></a>
     </div>
-
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
                 To Do App
             </a>
         </div>
-
         <div class="navbar-end">
             <div class="navbar-item">
                 <form method="POST">
