--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -15,32 +15,18 @@
         </div>
     </div>
 </nav>
-<div style='text-align: center;padding-left: 600px;padding-right: 600px; height: 550px;'>
-
+<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 620px;'>
 <h1 style="font-size: 30px;height: 100px;">Login Page</h1>
-
 <form method="POST" action="">
     {% csrf_token %}
     <div class="field">
         <label class="label">Username</label>
-        <div class="control has-icons-left has-icons-right">
-            <input class="input is-success" type="text" name="username" placeholder="Username" >
-            <span class="icon is-small is-left">
-                <i class="fas fa-user"></i>
-            </span>
-            <span class="icon is-small is-right">
-                <i class="fas fa-check"></i>
-            </span>
-       </div>
+        <input class="input is-success" type="text" name="username">
     </div>   
     <div class="field">
         <label class="label">Password</label>
-        <p class="control has-icons-left">
-          <input class="input" type="password" name="password" placeholder="Password">
-          <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-          </span>
-        </p>
+        <input class="input" type="password" name="password">
+        
     </div>
     <div class="field">
         <p class="control">
@@ -51,16 +37,15 @@
     </div>    
 </form>
 <div>
-    
-    {% for message in messages %}
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-        <div style="color:red">
-            {{ message }}
-        </div>
-        {% else %}
-            {{ message }}
-        {% endif %}
-    {% endfor %}
+{% for message in messages %}
+    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+    <div style="color:red">
+        {{ message }}
+    </div>
+    {% else %}
+        {{ message }}
+    {% endif %}
+{% endfor %}
 </div>
 <a href="{% url 'signup' %}">Don't have an account ? Signup now</a>  
 </div>
