Add background image

--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -15,8 +15,8 @@
         </div>
     </div>
 </nav>
-<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 620px;'>
-<h1 style="font-size: 30px;height: 100px;">Login Page</h1>
+<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 630px;'>
+<h1 style="font-size: 30px;height: 100px;">Login</h1>
 <form method="POST" action="">
     {% csrf_token %}
     <div class="field">
