--- a/todoapp/templates/base.html
+++ b/todoapp/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %} 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To do App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" type="text/css" href= "{%  static 'todo/style.css' %}">
 </head>
 <body>
 {% block content %}
