--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </nav>
-
+<div style="height: 630px;">
 <section class="section">
         <form method="POST">
             {% csrf_token %}
@@ -49,5 +49,6 @@
 {% if request.user.is_authenticated %}
     <a href="{% url 'home' %}">Back</a>
 {% endif %} 
+</div>
 
 {% endblock %}
