--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
@@ -28,8 +29,10 @@
         </div>
     </div>
 </nav>
+<div style="height: 653px;">
+<div style="text-align: right;">   
 {% if user.is_authenticated %}
-    <h1>Welcome, {{ user.username }}.</h1>
+    <h1 style="font-size: 40px;">Welcome, {{ user.username }}.</h1>
 {% endif %} 
 {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
@@ -39,6 +42,7 @@
     <a href="{% url 'change_password' %}">Change password</a>
 {% endif %} 
 </div>
+
 <section class="section">
     {% if messages %}
             {% for message in messages %}
@@ -92,4 +96,5 @@
         {% endfor %}
     </table>
 </section>
+</div>
 {% endblock %}
