--- a/todoapp/templates/signup.html
+++ b/todoapp/templates/signup.html
@@ -17,33 +17,54 @@
     </div>
 </nav>
 
-<div style="text-align: left;padding-left: 600px;padding-right: 600px; height: 630px;color: green">
-<h1 style="font-size: 30px;height: 70px;">Sign up</h1>
+<div style="text-align: left;padding-left: 600px;padding-right: 600px; height: 630px;">
+<h1 style="font-size: 30px;height: 70px;">Register</h1>
   <form method="post">
     {% csrf_token %}
-    {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }} 
-        <br>
-        {% if field.help_text %}
-          <small style="color:green">{{ field.help_text }}</small>
-        {% endif %}
-        </br>
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-    {% endfor %}
-    
+    <div class="field">
+      <div class="control has-icons-left has-icons-right">
+        <input class="input" type="text" name="username" placeholder="Username" >
+        <span class="icon is-small is-left">
+          <i class="fas fa-user"></i>
+        </span>
+      </div>
+    </div>
+    <div class="field">
+      <div class="control has-icons-left has-icons-right">
+      <input class="input" type="password" name="password1" placeholder="Password">
+      <span class="icon is-small is-left">
+        <i class="fas fa-lock"></i>
+      </span>
+      </div>  
+    </div>
+
+    <div class="field">
+      <div class="control has-icons-left has-icons-right">
+      <input class="input" type="password" name="password2" placeholder="Confirm Password">
+      <span class="icon is-small is-left">
+        <i class="fas fa-lock"></i>
+      </span>   
+      </div>  
+    </div>  
     <div  class="field">
       <p class="control">
         <button class="button is-success">
-          Signup
+          Register
         </button>
       </p>
     </div> 
   </form>
+  <div>
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+        <div style="color:red">
+            {{ message }}
+        </div>
+        {% else %}
+            {{ message }}
+        {% endif %}
+    {% endfor %}
+    </div>   
 <a href="{% url 'login' %}">Already have an account ? Please login</a>  
 </div>  
 {% endblock %}
