--- a/todoapp/templates/change_password.html
+++ b/todoapp/templates/change_password.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} 
 {% block content %}
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-            
-        </a>
-    </div>
-
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
@@ -17,26 +11,38 @@
 </nav>
 
 
-<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 653px;'>
-<h1 style="font-size: 30px;height: 100px;">Change Password</h1>    
+<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 635px;'>
+<h1 style="font-size: 30px;height: 70px;">Change Password</h1>    
 <form method="post">
     {% csrf_token %}
     <div class="field">
-        <label class="label">Old Password</label>
-        <input class="input" type="password" name="old_password" >
+        <div class="control has-icons-left has-icons-right">
+        <input class="input" type="password" name="old_password" placeholder="Old password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-lock"></i>
+        </span>
+        </div>  
     </div>
     <div class="field">
-        <label class="label">New Password</label>
-        <input class="input" type="password" name="new_password1" >
+        <div class="control has-icons-left has-icons-right">
+        <input class="input" type="password" name="new_password1" placeholder="New Password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-lock"></i>
+        </span>
+        </div>  
     </div>
     <div class="field">
-        <label class="label">Confirm New Password</label>
-        <input class="input" type="password" name="new_password2" >
+        <div class="control has-icons-left has-icons-right">
+        <input class="input" type="password" name="new_password2" placeholder="Confirm New Password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-lock"></i>
+        </span>
+        </div>  
     </div>
     
     <div class="field">
         <p class="control">
-          <button class="button is-success">
+          <button class="button is-link">
             Save
           </button>
         </p>
@@ -54,7 +60,8 @@
 {% endfor %}
 
 {% if request.user.is_authenticated %}
-    <a href="{% url 'home' %}">Back</a>
+    <a class="button" href="{% url 'home' %}">Back</a>
 {% endif %}
+</div>
 
 {% endblock %}  
