--- a/todoapp/static/todo/style.css
+++ b/todoapp/static/todo/style.css
@@ -1,3 +1,3 @@
 body{
-    background: white url("images/background.jpg") no-repeat; background-size: cover;
+    background: white url("images/background.jpg") no-repeat; background-size: cover; height: auto;
     }
