--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -2,11 +2,7 @@
 
 
 {% block content %}
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io"></a>
-    </div>
-
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
@@ -31,7 +27,7 @@
         </div>
     </div>
 </nav>
-<div style="height: 630px;">
+<div style="height: 631px;">
 <section class="section">
         <form method="POST">
             {% csrf_token %}
@@ -47,7 +43,7 @@
         </form>
     </section>
 {% if request.user.is_authenticated %}
-    <a href="{% url 'home' %}">Back</a>
+    <a class="button" href="{% url 'home' %}">Back</a>
 {% endif %} 
 </div>
 
