--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -2,10 +2,8 @@
 
 
 {% block content %}
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io"></a>
-    </div>
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
@@ -29,7 +27,7 @@
         </div>
     </div>
 </nav>
-<div style="height: 653px;">
+<div style="height: 631px;">
 <div style="text-align: right;">   
 {% if user.is_authenticated %}
     <h1 style="font-size: 40px;">Welcome, {{ user.username }}.</h1>
@@ -46,7 +44,7 @@
 <section class="section">
     {% if messages %}
             {% for message in messages %}
-                <article class="message is-success">
+                <article class="message is-link">
                     <div class="message-header">
                         <p>Nice!</p>
                     </div>
@@ -96,5 +94,6 @@
         {% endfor %}
     </table>
 </section>
+</div>
 </div>
 {% endblock %}
