--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %} 
 {% block content %}
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-            
-        </a>
-    </div>
-
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item">
@@ -15,22 +9,29 @@
         </div>
     </div>
 </nav>
-<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 630px;'>
-<h1 style="font-size: 30px;height: 100px;">Login</h1>
+<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 635px;'>
+<h1 style="font-size: 30px;height: 70px;">Login</h1>
 <form method="POST" action="">
     {% csrf_token %}
     <div class="field">
-        <label class="label">Username</label>
-        <input class="input is-success" type="text" name="username">
-    </div>   
+        <div class="control has-icons-left has-icons-right">
+          <input class="input" type="text" name="username" placeholder="Username" >
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </div>
+    </div>
     <div class="field">
-        <label class="label">Password</label>
-        <input class="input" type="password" name="password">
-        
+        <div class="control has-icons-left has-icons-right">
+        <input class="input" type="password" name="password" placeholder="Password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-lock"></i>
+        </span>
+        </div>  
     </div>
     <div class="field">
         <p class="control">
-          <button class="button is-success">
+          <button class="button is-link">
             Login
           </button>
         </p>
@@ -47,7 +48,7 @@
     {% endif %}
 {% endfor %}
 </div>
-<a href="{% url 'signup' %}">Don't have an account ? Signup now</a>  
+<a href="{% url 'signup' %}">Don't have an account ? Register now!</a>  
 </div>
 
 {% endblock %}
