--- a/todoapp/templates/change_password.html
+++ b/todoapp/templates/change_password.html
@@ -11,8 +11,8 @@
 </nav>
 
 
-<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 635px;'>
-<h1 style="font-size: 30px;height: 70px;">Change Password</h1>    
+<div style='text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;'>
+<h1 style="font-size: 30px;height: 70px;"><b>Change Password</b></h1>    
 <form method="post">
     {% csrf_token %}
     <div class="field">
