--- a/todoapp/templates/login_page.html
+++ b/todoapp/templates/login_page.html
@@ -9,8 +9,8 @@
         </div>
     </div>
 </nav>
-<div style='text-align: left;padding-left: 600px;padding-right: 600px; height: 635px;'>
-<h1 style="font-size: 30px;height: 70px;">Login</h1>
+<div style='text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;'>
+<h1 style="font-size: 30px;height: 70px;"><b>Login</b></h1>
 <form method="POST" action="">
     {% csrf_token %}
     <div class="field">
