--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -30,14 +30,14 @@
 <div style="height: 631px;">
 <div style="text-align: right;">   
 {% if user.is_authenticated %}
-    <h1 style="font-size: 40px;">Welcome, {{ user.username }}.</h1>
+    <h1 style="font-size: 40px;"><b>Welcome, {{ user.username }}</b></h1>
 {% endif %} 
 {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'logout' %}"><b>Logout</b></a>
 {% endif %} 
 <div>
 {% if request.user.is_authenticated %}
-    <a href="{% url 'change_password' %}">Change password</a>
+    <a href="{% url 'change_password' %}"><b>Change password</b></a>
 {% endif %} 
 </div>
 
