--- a/todoapp/templates/signup.html
+++ b/todoapp/templates/signup.html
@@ -11,8 +11,8 @@
     </div>
 </nav>
 
-<div style="text-align: left;padding-left: 600px;padding-right: 600px; height: 635px;">
-<h1 style="font-size: 30px;height: 70px;">Register</h1>
+<div style="text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;">
+<h1 style="font-size: 30px;height: 70px;"><b>Register</b></h1>
   <form method="post">
     {% csrf_token %}
     <div class="field">
@@ -51,7 +51,7 @@
   <div>
     {% for message in messages %}
         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-        <div style="color:red">
+        <div style="color:red; align-content: center;">
             {{ message }}
         </div>
         {% else %}
@@ -59,6 +59,6 @@
         {% endif %}
     {% endfor %}
     </div>   
-<a href="{% url 'login' %}">Already have an account ? Please login now!</a>  
+<a href="{% url 'login' %}">Already have an account ? Login now!</a>  
 </div>  
 {% endblock %}
