--- a/todoapp/templates/signup.html
+++ b/todoapp/templates/signup.html
@@ -59,6 +59,16 @@
         {% endif %}
     {% endfor %}
     </div>   
-<a href="{% url 'login' %}">Already have an account ? Login now!</a>  
+<a href="{% url 'login' %}">Already have an account ? Login now!</a>
+<b>
+<p style="color:red">Password requirements:</p>
+<ul style= "color: red">
+  <p>Your password can’t be too similar to your other personal information.</p>
+  Your password must contain at least 8 characters.
+  Your password can’t be a commonly used password.
+  Your password can’t be entirely numeric.
+</ul>
+</b>
+
 </div>  
 {% endblock %}
