--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -1,50 +1,33 @@
 {% extends 'base.html' %}
-
-
 {% block content %}
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-    <div class="navbar-menu">
-        <div class="navbar-start">
-            <a class="navbar-item">
-                To Do App
-            </a>
-        </div>
-
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <form method="POST">
-                    {% csrf_token %}
-                    <div class="field has-addons">
-                        <div class="control">
-                            <input name="task" class="input" type="text" placeholder="Add Todo">
-                        </div>
-                        <div class="control">
-                            <button type="submit" class="button is-link">Submit</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</nav>
 <div style="height: 631px;">
 <section class="section">
         <form method="POST">
             {% csrf_token %}
-            <div class="field has-addons">
-                <div class="control">
-                    <input name="task" class="input" type="text" placeholder="{{ todo.task }}" value="{{ todo.task }}">
-                    <input name="completed" type="hidden" value="{{ todo.completed }}">
-                </div>
-                <div class="control">
-                    <button type="submit" class="button is-link">Edit Todo</button>
-                </div>
-            </div>
+            <div style='text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;'>
+                <h1 style="font-size: 30px;height: 70px;"><b>Edit task</b></h1>
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <div class="control">
+                        <input class="input" name ="task" type="text" placeholder="Edit Task Here">
+                    </div>
+                    <div>Choose a category:
+                        {{ todo_form.category}}
+                    </div>
+                    <div class="field">
+                        <p class="control">
+                          <button class="button is-link">
+                            Edit
+                          </button>
+                        </p>
+                    </div> 
+                </form>
         </form>
+   {% if request.user.is_authenticated %}
+        <a class="button" href="{% url 'home' %}">Back</a>
+    {% endif %}         
     </section>
-{% if request.user.is_authenticated %}
-    <a class="button" href="{% url 'home' %}">Back</a>
-{% endif %} 
+
 </div>
 
 {% endblock %}
