--- a/todoapp/templates/base.html
+++ b/todoapp/templates/base.html
@@ -9,6 +9,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href= "{%  static 'todo/style.css' %}">
 </head>
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <div class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item">
+                To Do App
+            </a>
+        </div>
+    </div>
+</nav>
 <body>
 {% block content %}
 
