--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -1,32 +1,5 @@
 {% extends 'base.html' %}
-
-
 {% block content %}
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-    
-    <div class="navbar-menu">
-        <div class="navbar-start">
-            <a class="navbar-item">
-                To Do App
-            </a>
-        </div>
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <form method="POST">
-                    {% csrf_token %}
-                    <div class="field has-addons">
-                        <div class="control">
-                            <input name="task" class="input" type="text" placeholder="Add Todo">
-                        </div>
-                        <div class="control">
-                            <button type="submit" class="button is-link">Submit</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</nav>
 <div style="height: 631px;">
 <div style="text-align: right;">   
 {% if user.is_authenticated %}
@@ -39,6 +12,10 @@
 {% if request.user.is_authenticated %}
     <a href="{% url 'change_password' %}"><b>Change password</b></a>
 {% endif %} 
+</div>
+</div>
+<div>
+    <a href="{% url 'add_task' %}"><b>Add task</b></a>
 </div>
 
 <section class="section">
@@ -58,6 +35,7 @@
         <thead>
         <tr>
             <th>Task</th>
+            <th>Category</th>
             <th>Completed</th>
             <th>Date Created</th>
             <th>Delete</th>
@@ -74,6 +52,9 @@
                         {{ todo.task }}
                         </a>
                     {% endif %}
+                
+                <td>
+                    {{ todo.category}}
                 </td>
                 <td>
                     {% if todo.completed == True %}
