Add a due date for task

--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -11,9 +11,13 @@
                     <div class="control">
                         <input class="input" name ="task" type="text" placeholder="Edit Task Here">
                     </div>
-                    <div>Choose a category:
-                        {{ todo_form.category}}
-                    </div>
+                    <p>Choose a category for your task:
+                        {{ todo_form.category}} 
+                    </p>
+                    <p>
+                     Choose a due date for your task:
+                        {{ todo_form.due_date  }}
+                    </p>
                     <div class="field">
                         <p class="control">
                           <button class="button is-link">
