--- a/todoapp/templates/home.html
+++ b/todoapp/templates/home.html
@@ -15,7 +15,7 @@
 </div>
 </div>
 <div>
-    <a href="{% url 'add_task' %}"><b>Add task</b></a>
+    <a class = 'button is-link' href="{% url 'add_task' %}"><b>Add task</b></a>
 </div>
 
 <section class="section">
