--- a/todoapp/templates/edit.html
+++ b/todoapp/templates/edit.html
@@ -1,36 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
-<div style="height: 631px;">
-<section class="section">
-        <form method="POST">
-            {% csrf_token %}
-            <div style='text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;'>
-                <h1 style="font-size: 30px;height: 70px;"><b>Edit task</b></h1>
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <div class="control">
-                        <input class="input" name ="task" type="text" placeholder="Edit Task Here">
-                    </div>
-                    <p>Choose a category for your task:
-                        {{ todo_form.category}} 
-                    </p>
-                    <p>
-                     Choose a due date for your task:
-                        {{ todo_form.due_date  }}
-                    </p>
-                    <div class="field">
-                        <p class="control">
-                          <button class="button is-link">
-                            Edit
-                          </button>
-                        </p>
-                    </div> 
-                </form>
-        </form>
-   {% if request.user.is_authenticated %}
-        <a class="button" href="{% url 'home' %}">Back</a>
-    {% endif %}         
-    </section>
+<div style='text-align: left;padding-left: 570px;padding-right: 570px; height: 635px;'>
+  <h1 style="font-size: 30px;height: 70px;"><b>Edit Task</b></h1>
+  <form method="POST" action="">
+      {% csrf_token %}
+      <div class="control">
+        <input class="input" name ="task" type="text" placeholder="{{ todo_form.task }}">
+      </div>
+      <p>Choose a category for your task:
+        {{ todo_form.category}} 
+      </p>
+      <p>
+        Choose a due date for your task:
+        {{ todo_form.due_date  }}
+      </p>
+      
+      <div class="field">
+          <p class="control">
+            <button class="button is-link">
+              Add Task
+            </button>
+          </p>
+      </div> 
+  </form>
+  <p>
+  {% if request.user.is_authenticated %}
+    <a class="button" href="{% url 'home' %}">Back</a>
+  {% endif %}
+  </p>
+
+        
+    
 
 </div>
 
